# settlesentry-payment-collection-agent

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.build.yaml  compose.yaml  compose.yml  dockerfile  pyproject.toml
.github/workflows/: test-and-publish-container.yml
demos/: debug_tool_outputs.py  openrouter_demo.py  smoke_autonomous_agent.py  smoke_real_agent.py
docs/: ASSIGNMENT.md  AUTONOMOUS_MODE.md  DESIGN.md  DEVELOPMENT_ISSUES.md  EVALUATION.md  IMPLEMENTATION_NOTES.md  SAMPLE_CONVERSATIONS.md  conversations.md  evaluation_sample.md
docs/notes/: ARCHITECTURE_NOTES.md  DESIGN_RATIONALE.md
docs/planning/: arch.md  discussion.md  full_evaluation.md
docs/references/: SCENARIO_SPEC.md
notebooks/: openrouter_demo.py  payments_client_demo.py  smoke_real_agent.py
scripts/: evaluate_agent.py
settlesentry/: README.md  pyproject.toml
settlesentry/src/settlesentry/: cli.py
settlesentry/src/settlesentry/agent/: __init__.py  actions.py  agent.py  contracts.py  deps.py  graph.py  interface.py  messages.py  modes.py  nodes.py  parser.py  policy.py  responder.py  routing.py  state.py
settlesentry/src/settlesentry/agent/autonomous/: __init__.py  graph.py  memory.py  prompts.py  runtime.py  safety.py
settlesentry/src/settlesentry/agent/autonomous/tools/: __init__.py  account.py  common.py  factory.py  identity.py  lifecycle.py  payment.py
settlesentry/src/settlesentry/agent/parsers/: __init__.py  deterministic.py  llm.py  prompts.py
settlesentry/src/settlesentry/agent/parsing/: __init__.py  base.py  deterministic.py  factory.py  llm.py  prompts.py
settlesentry/src/settlesentry/agent/policy/: __init__.py  models.py  payment.py  rules.py
settlesentry/src/settlesentry/agent/response/: __init__.py  messages.py  prompts.py  writer.py
settlesentry/src/settlesentry/agent/state/: __init__.py  models.py
settlesentry/src/settlesentry/agent/tools/: __init__.py  models.py  tools.py
settlesentry/src/settlesentry/agent/workflow/: __init__.py  constants.py  graph.py  helpers.py  input.py  nodes.py  operations.py  result.py  routing.py
settlesentry/src/settlesentry/core/: __init__.py  logger.py  operation.py  settings.py
settlesentry/src/settlesentry/integrations/payments/: client.py  endpoints.py  schemas.py
settlesentry/src/settlesentry/security/: __init__.py  cards.py  identity.py  redaction.py
settlesentry/src/settlesentry/utils/: timer.py
tests/: conftest.py  test_agent_parser.py  test_agent_parsers.py  test_agent_policy.py  test_agent_state.py  test_logger_traceability.py  test_payments_client.py  test_payments_schemas.py  test_redaction.py
(+22 files in other folders)
