[project]
name = "settlesentry-payment-collection-agent"
version = "0.1.0"
description = "SettleSentry: Payment Collection Agent - A policy-governed AI payment collection agent with strict identity verification, safe tool calls, and deterministic payment flow control."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
