[project]
name = "settlesentry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings",
    "pydantic",
    "rich",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/settlesentry"]
