[project]
name = "settlesentry"
version = "0.1.0"
description = "Policy-governed payment collection agent with strict identity verification and safe tool calls."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings",
    "pydantic",
    "rich",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "pydantic-ai-slim[openrouter]>=1.87.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/settlesentry"]
